// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithUnit /> by default matches with snapshot 1`] = `
<div
  className="text-input-with-unit__StyledTextInputWithUnit-gjmccx-0 cNrele"
>
  <input
    className="text-input-with-unit__StyledTextInput-gjmccx-1 dlIRXg text-input__StyledInput-sc-11wej6v-1 jNJvhF"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="text-input-with-unit__StyledInputUnit-gjmccx-2 kxcQws"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with disabled prop matches with snapshot 1`] = `
<div
  className="text-input-with-unit__StyledTextInputWithUnit-gjmccx-0 cNrele"
>
  <input
    className="text-input-with-unit__StyledTextInput-gjmccx-1 dlIRXg text-input__StyledInput-sc-11wej6v-1 jNJvhF"
    disabled={true}
    name="text"
    type="number"
  />
  <span
    className="text-input-with-unit__StyledInputUnit-gjmccx-2 dZRNjl"
    disabled={true}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with error prop matches with snapshot 1`] = `
<div
  className="text-input-with-unit__StyledTextInputWithUnit-gjmccx-0 cNrele"
>
  <input
    className="text-input-with-unit__StyledTextInput-gjmccx-1 dlIRXg text-input__StyledInput-sc-11wej6v-1 dERTZf"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="text-input-with-unit__StyledInputUnit-gjmccx-2 hPDcLd"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with error prop matches with snapshot 2`] = `
<div
  className="text-input-with-unit__StyledTextInputWithUnit-gjmccx-0 cNrele"
>
  <input
    className="text-input-with-unit__StyledTextInput-gjmccx-1 dlIRXg text-input__StyledInput-sc-11wej6v-1 dERTZf"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="text-input-with-unit__StyledInputUnit-gjmccx-2 hPDcLd"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with unit prop matches with snapshot 1`] = `
<div
  className="text-input-with-unit__StyledTextInputWithUnit-gjmccx-0 cNrele"
>
  <input
    className="text-input-with-unit__StyledTextInput-gjmccx-1 dlIRXg text-input__StyledInput-sc-11wej6v-1 jNJvhF"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="text-input-with-unit__StyledInputUnit-gjmccx-2 kxcQws"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with valid prop matches with snapshot 1`] = `
<div
  className="text-input-with-unit__StyledTextInputWithUnit-gjmccx-0 cNrele"
>
  <input
    className="text-input-with-unit__StyledTextInput-gjmccx-1 dlIRXg text-input__StyledInput-sc-11wej6v-1 culAbn"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="text-input-with-unit__StyledInputUnit-gjmccx-2 dsxCMU"
    disabled={false}
  >
    λ
  </span>
</div>
`;
